<resources>
    <string name="app_name">Tare</string>
    <string name="title_activity_sign_up">SignUp</string>
    <string name="support_email">support@tare.com</string>
    <string name="remember_me">Remember Me</string>
    <string name="password">Password</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="login">Login</string>
    <string name="create_account">Create Account</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="email">Email</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="zip_code">Zip Code</string>
    <string name="facebook_app_id">1989019401349840</string>
    <string name="fb_login_protocol_scheme">fb1989019401349840</string>
</resources>
