<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical"
    tools:context="com.tare.tare.LoginActivity">

    <ImageView
        android:id="@+id/logo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerInParent="true"
        android:background="@drawable/titlebar"
        android:padding="@dimen/layout_padding" />

    <GridLayout
        android:id="@+id/fields"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/logo"
        android:columnCount="2"
        android:columnOrderPreserved="true"
        android:orientation="horizontal"
        android:padding="@dimen/layout_padding"
        android:rowCount="2"
        android:rowOrderPreserved="true">

        <TextView
            android:id="@+id/login_email"
            android:layout_gravity="fill_horizontal"
            android:text="@string/email"
            android:textSize="@dimen/field_text_size" />

        <EditText
            android:id="@+id/login_email_entry"
            android:layout_gravity="fill_horizontal"
            android:hint="@string/email"
            android:inputType="textEmailAddress"
            android:textSize="@dimen/field_text_size" />


        <TextView
            android:id="@+id/login_password"
            android:layout_gravity="fill_horizontal"
            android:text="@string/password"
            android:textSize="@dimen/field_text_size" />

        <EditText
            android:id="@+id/login_password_entry"
            android:layout_gravity="fill_horizontal"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:textSize="@dimen/field_text_size" />
    </GridLayout>


    <android.support.v7.widget.AppCompatCheckBox
        android:id="@+id/remember_me_box"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/fields"
        android:layout_marginStart="@dimen/fab_margin"
        android:text="@string/remember_me"
        android:textAppearance="@style/TextAppearance.AppCompat.Small" />

    <TextView
        android:id="@+id/forgot_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_below="@+id/fields"
        android:padding="@dimen/layout_padding"
        android:text="@string/forgot_password"
        android:textAppearance="@style/TextAppearance.AppCompat.Small" />

    <Button
        android:id="@+id/login_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/forgot_password"
        android:layout_centerInParent="true"
        android:layout_marginEnd="@dimen/fab_margin"
        android:layout_marginStart="@dimen/fab_margin"
        android:background="@color/mintDark"
        android:padding="@dimen/layout_padding"
        android:text="@string/login"
        android:textAppearance="@style/TextAppearance.AppCompat.Small"
        android:textColor="@color/white" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="@dimen/fab_margin"
        android:layout_marginStart="@dimen/fab_margin"
        android:id="@+id/facebook_login_button"
        android:layout_below="@+id/login_button"
        android:background="@color/com_facebook_blue"
        android:text="Login with Facebook"
        android:textColor="@color/white"
        android:paddingStart="@dimen/fab_margin"
        android:paddingEnd="@dimen/fab_margin"
        />

    <Button
        android:id="@+id/create_account"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/facebook_login_button"
        android:layout_centerInParent="true"
        android:background="@android:color/transparent"
        android:padding="@dimen/layout_padding"
        android:text="@string/create_account"
        android:textAppearance="@style/TextAppearance.AppCompat.Small"
        android:textColor="@color/colorAccent" />

    <TextView
        android:id="@+id/need_help"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/create_account"
        android:layout_centerInParent="true"
        android:padding="@dimen/layout_padding"
        android:text="Need help?" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/need_help"
        android:layout_centerInParent="true"
        android:orientation="horizontal"
        android:padding="@dimen/layout_padding">

        <TextView
            android:id="@+id/contact_string"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingEnd="4dp"
            android:text="Contact us at"
            android:textAppearance="@style/TextAppearance.AppCompat.Small" />

        <TextView
            android:id="@+id/support_email"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:autoLink="email"
            android:text="@string/support_email"
            android:textAppearance="@style/TextAppearance.AppCompat.Small" />
    </LinearLayout>

    <ProgressBar
        android:id="@+id/progress_bar_login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:visibility="gone" />
</RelativeLayout>
